Removed footer from print; Fixed line breaks in comments

--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -591,3 +591,20 @@ textarea.form-control {
 }
 
 
+
+
+@media print {
+    .footer-open {
+        display: none;
+    }
+
+    #legend {
+    position: absolute;
+    z-index: 109;
+    right: 20px;
+    top: 40%;
+    background-color: rgba(255,255,255,0.8);
+    padding: 10px;
+    min-width: 200px;
+    }
+}
